# skipalign

./: .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/planning/: 01-prd.md  02-trd.md  03-user-flow.md  04-data-schema.md  05-output-design.md  06-commands.md  06-tasks.md  07-coding-convention.md
src/skipalign/: __init__.py  cli.py  io.py  kmer.py  mapper.py  matrix.py  pipeline.py  primer.py  reporter.py  scorer.py  strand.py  unitig.py  validator.py  web.py
tests/: generate_test_data.py  test_integration.py  test_kmer.py  test_matrix.py  test_primer.py  test_strand.py  test_unitig.py
tests/data/: expected_results.txt
tests/data/annotations/: TestVirus_A.gff3
tests/data/genomes/: TestVirus_A.fasta  TestVirus_B.fasta  TestVirus_C.fasta  TestVirus_D.fasta  TestVirus_E.fasta  TestVirus_F.fasta  TestVirus_G.fasta  TestVirus_G_RC.fasta  TestVirus_H.fasta  TestVirus_H_RC.fasta
tests/example_output/: conserved_region.fasta  msa_alignment.fasta  pipeline_summary.json  primers.tsv  report.html  terminal_output.txt  validation_summary.txt
